--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
+  "author": "Vitor Emanuel Lourenco",
+  "description": "Simple react app that simmulates a movie tickets website",
   "name": "cineflex",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +33,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "resolutions": {"styled-components": "^5"}
 }
