--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -34,5 +35,7 @@
       "last 1 safari version"
     ]
   },
-  "resolutions": {"styled-components": "^5"}
+  "resolutions": {
+    "styled-components": "^5"
+  }
 }
