package: Add production link to homepage prop

--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
   "resolutions": {
     "styled-components": "^5"
   },
-  "homepage": "./"
+  "homepage": "https://cineflex-b4mz3t2zu-vitorelourenco.vercel.app/"
 }
